flashメッセージとエラーメッセージの追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+    <div>
+      <% if flash[:notice] %>
+      <div>
+        <p>
+          <%= flash[:notice] %>
+        </p>
+      </div>
+      <% end %>
+    </div>
     <%= yield %>
   </body>
 </html>
