--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,51 @@
  *= require_tree .
  *= require_self
  */
+
+
+body {
+  margin: 33px;
+  color: #333;
+  font-family: verdana, arial, helvetica, sans-serif;
+  line-height: 18px;
+  font-size: 13px;
+}
+
+p, ol, ul, td {
+    font-family: verdana, arial, helvetica, sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    margin: 33px;
+}
+
+a:visited {
+    color: #666;
+}
+
+a {
+    color: #000;
+}
+
+th {
+  padding-bottom: 5px;
+}
+
+td {
+  padding: 0 5px 7px 5px;
+}
+
+.field {
+  margin-bottom: 10px
+}
+
+.label {
+  display: block;
+}
+
+.actions {
+  margin-bottom: 10px;
+}
+
+#notice {
+    color: green;
+}
