--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -13,17 +13,17 @@
 
 <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
 
-<div>
-  <%= f.label :Title %>
+<div  class="field">
+  <%= f.label :Title, class: "label" %>
   <%= f.text_field :title %>
 </div>
 
-<div>
-  <%= f.label :Body %>
+<div  class="field">
+  <%= f.label :Body, class: "label" %>
   <%= f.text_area :body %>
 </div>
 
-<div>
+<div class="actions">
   <%= f.submit 'Update Book' %>
 </div>
 
