--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th>Title</th>
       <th>Body</th>
+      <th colspan="3"></th>
 
 
     </tr>
@@ -35,17 +36,17 @@
 
   <%= form_with model: @book, url: books_path, method: :post do |f| %>
 
-    <div>
-      <%= f.label :Title %>
+    <div class="field">
+      <%= f.label :Title, class: "label" %>
       <%= f.text_field :title %>
     </div>
 
-    <div>
-      <%= f.label :Body %>
+    <div  class="field">
+      <%= f.label :Body, class: "label" %>
       <%= f.text_area :body %>
     </div>
 
-    <div>
+    <div  class="actions">
       <%= f.submit 'Create Book' %>
     </div>
 
