--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <div>
       <% if flash[:notice] %>
       <div>
-        <p>
+        <p id="notice">
           <%= flash[:notice] %>
         </p>
       </div>
